--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,10 @@ body {
 }
 
 h1 {
-  font-size: 3.2em;
+  font-size: 3em;
   line-height: 1.1;
+}
+
+h1Strike {
+  text-decoration: line-through;
 }
